--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Completeword</string>
     <string name="read">READ</string>
+    <color name="white">#8462faff</color>
 </resources>
